src/objects/Festival__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Data de término do festival</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Tickets_Sold__c</fullName>
        <label>General Tickets Sold</label>
        <summarizedField>Attendees__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendees__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>General Admission</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendees__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Data de início do festival</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Sold__c</fullName>
        <formula>General_Tickets_Sold__c  +  VIP_Tickets_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Tickets_Sold__c</fullName>
        <label>VIP Tickets Sold</label>
        <summarizedField>Attendees__c.Tickets_Purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendees__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>VIP</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendees__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Festival</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Festival</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validacao_da_capacidade</fullName>
        <active>true</active>
        <description>Regra para validar a capacidade do evento com o numero de ingressos comprados.</description>
        <errorConditionFormula>Capacity__c  &lt;  Total_Tickets_Sold__c</errorConditionFormula>
        <errorMessage>O evento atingiu sua capacidade máxima.</errorMessage>
    </validationRules>
</CustomObject>